--- a/blog.html
+++ b/blog.html
@@ -305,7 +305,7 @@
                 <!-- Footer Widget Area -->
                 <div class="col-12 col-lg-5">
                     <div class="footer-widget-area mt-50">
-                        <a href="#" class="d-block mb-5"><img src="C:\Users\Sem T\Downloads\Victory Star\Victory Star Website pages\img\core-img\VLogo11.png" alt=""></a>
+                        <a href="#" class="d-block mb-5"><img src="C:\Users\Sem T\Downloads\Victory Star\Victory Star Website pages\img\core-img\VLogo1.jpg" alt=""></a>
                         <p>Welcome to Victory Star Travel and Tourism, your gateway to unforgettable journeys. With a passion for exploration and a commitment to excellence, we craft personalized travel experiences that exceed your dreams. From exotic getaways to cultural adventures, our expert team will guide you every step of the way, ensuring a seamless and unforgettable trip. At Victory Star, we don't just plan travels – we create memories that last a lifetime.</p>
                     </div>
                 </div>
