--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
                     <nav class="classy-navbar justify-content-between" id="palatinNav">
 
                         <!-- Nav brand -->
-                        <a href="index.html" class="nav-brand"><img src="C:\Users\Sem T\Downloads\Victory Star\Victory Star Website pages\img\core-img\VLogo11.png" alt=""></a>
+                        <a href="index.html" class="nav-brand"><img src="C:\Users\Sem T\Downloads\Victory Star\Victory Star Website pages\img\core-img\VLogo1.jpg" alt=""></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
